<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>gr.cite</groupId>
		<artifactId>sti-viewer-parent</artifactId>
		<version>1.0.0</version>
		<relativePath>../pom.xml</relativePath>
	</parent>

	<groupId>gr.cite.intelcomp</groupId>
	<artifactId>sti-viewer</artifactId>
	<version>1.0.0</version>
	<name>STI Viewer Core</name>
	<description>STI Viewer for Intelcomp</description>
	<properties>
		<java.version>11</java.version>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>5.2.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>5.2.2</version>
		</dependency>
		<!-- check if this is needed here or in tools-data -->
		<dependency>
			<groupId>javax.persistence</groupId>
			<artifactId>javax.persistence-api</artifactId>
		</dependency>

		<dependency>
			<groupId>gr.cite</groupId>
			<artifactId>data-tools</artifactId>
		</dependency>
		<dependency>
			<groupId>gr.cite</groupId>
			<artifactId>field-set</artifactId>
		</dependency>
		<dependency>
			<groupId>gr.cite</groupId>
			<artifactId>oidc-authn</artifactId>
		</dependency>
		<dependency>
			<groupId>gr.cite</groupId>
			<artifactId>logging</artifactId>
		</dependency>
		<dependency>
			<groupId>gr.cite</groupId>
			<artifactId>oidc-authz</artifactId>
		</dependency>
		<dependency>
			<groupId>gr.cite</groupId>
			<artifactId>exceptions</artifactId>
		</dependency>
		<dependency>
			<groupId>gr.cite</groupId>
			<artifactId>validation</artifactId>
		</dependency>
		<dependency>
			<groupId>gr.cite</groupId>
			<artifactId>rabbitmq-core</artifactId>
		</dependency>
		<dependency>
			<groupId>gr.cite</groupId>
			<artifactId>queue-outbox</artifactId>
		</dependency>
		<dependency>
			<groupId>gr.cite</groupId>
			<artifactId>queue-inbox</artifactId>
		</dependency>
		<dependency>
			<groupId>gr.cite</groupId>
			<artifactId>elastic</artifactId>
		</dependency>
		<dependency>
			<groupId>gr.cite</groupId>
			<artifactId>keycloak-api</artifactId>
		</dependency>
		<!-- Only added this because of error
		Factory method 'entityManagerFactory' threw exception; nested exception is java.lang.NoClassDefFoundError: org/hibernate/boot/model/naming/CamelCaseToUnderscoresNamingStrategy
		Shouldn't this be only at web project?
		-->
		<!--		<dependency>-->
		<!--			<groupId>org.hibernate</groupId>-->
		<!--			<artifactId>hibernate-core</artifactId>-->
		<!--			<version>${hibernate.version}</version>-->
		<!--		</dependency>-->
		<!-- For Instant parsing -->
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
		</dependency>
		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>gr.cite</groupId>
			<artifactId>queue-inbox</artifactId>
			<version>1.0.0</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>gr.cite</groupId>
			<artifactId>queue-inbox</artifactId>
			<version>1.0.0</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>gr.cite</groupId>
			<artifactId>cipher</artifactId>
		</dependency>
		<dependency>
			<groupId>gr.cite</groupId>
			<artifactId>cipher</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-webmvc-core</artifactId>
			<version>1.7.0</version>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-ui</artifactId>
			<version>1.7.0</version>
		</dependency>
	</dependencies>

</project>
